kubernetes/backend_produkt/backend-produkt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-produkt
  labels:
    app: backend-produkt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-produkt
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend-produkt
    spec:
      containers:
        - name: backend-produkt
          image: annasel/product_service:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-produkt-pvc
      restartPolicy: Always
